--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     <div class="col-right">
       <h1 class="section-title"> <span>Dr.</span> Selmeczi Zsolt</h1>
       <h2>fog- és szájbetegségek szakorvosa</h2>
-      <p> Életem jelentősebb eseményei <br><br>
+		<br>
+      <p> 
 <b>1971</b> - Az első e-mail és a „@” jel megszületésével nagyjából egyidőben én is
 megláttam a napvilágot. <br>
 <b>1976</b> - Elvégeztem az első orvosi beavatkozásokat, de pácienseim ekkor még csak
@@ -139,21 +140,22 @@ Kékszalagon találtam magam.
     <div class="all-projects">
       <div class="project-item">
         <div class="project-info">
-          <h1>KÖRNYEZETVÉDELMI ALAPELVEINK</h1>
-          <h2>Nekünk fontos a Föld</h2>
+          <h1>NEKÜNK FONTOS A FÖLD</h1>
+          
           <p> 
-			Bár teljesen zöldek tevékenységünk jellegéből adódóan sajnos még nem tudunk
+			
+			◎ Bár teljesen zöldek tevékenységünk jellegéből adódóan sajnos még nem tudunk
             lenni, minden területen törekszünk arra, hogy minél kisebb legyen ökológiai
             lábnyomunk:
 			  <br><br>
-            energiatakarékos izzókat használunk <br><br>
-            szelektíven gyűjtjük a hulladékot
-            a tevékenységünk során keletkező veszélyes hulladékot egy erre specializálódott
-            céggel szállíttatjuk el <br><br>
-            környezetbarát tisztítószerekkel tartjuk tisztán rendelőnket <br><br>
-            csak ahol higiéniai okokból feltétlenül szükséges, ott alkalmazunk eldobható,
-            egyszer használatos dolgokat <br><br>
-            papírkímélő online számázási rendszert vezettünk be</p>
+            ◎ energiatakarékos izzókat használunk, <br><br>
+            ◎ szelektíven gyűjtjük a hulladékot,
+            a tevékenységünk során keletkező veszélyes hulladékot pedig egy erre specializálódott
+            céggel szállíttatjuk el, <br><br>
+            ◎ környezetbarát tisztítószerekkel tartjuk tisztán rendelőnket, <br><br>
+            ◎ csak ahol higiéniai okokból feltétlenül szükséges, ott alkalmazunk eldobható,
+            egyszer használatos dolgokat, <br><br>
+            ◎ papírkímélő online számázási rendszert vezettünk be.</p>
         </div>
         <div class="project-img"> <img src="./img/taj.png" alt="img"> </div>
       </div>
@@ -169,15 +171,14 @@ Kékszalagon találtam magam.
     <div class="all-projects">
       <div class="project-item">
         <div class="project-info">
-          <h1>COVID-19</h1>
-          <h2>Kiemelt járványügyi intézkedések</h2>
+          <h1>RENDELŐI PROTOKOLL</h1>
           <p>Kérjük kedves Pácienseinket, hogy rendelőnkbe csak megfelelő egészségi állapotban, lehetőleg kísérő nélkül, a megbeszélt időpontban pontosan érkezzenek! Érkezéskor kérjük a kikészített lábzsákot felvenni, és a kézfertőtlenítőt használni szíveskedjenek! <br><br>
 			  Rendelőnket az Önök egészségének védelme érdekében minden este ózonnal
 fertőtlenítjük.
 			
 			</p>
         </div>
-        <div class="project-img"> <img src="img/csapat.png" alt="img"> </div>
+        <div class="project-img"> <img src="img/panda.png" alt="img"> </div>
       </div>
     </div>
   </div>
@@ -328,7 +329,7 @@ fertőtlenítjük.
       <h1 class="section-title">Kapcsolat</h1>
     </div>
     <div class="openhours">
-      <h1>Pácienseinket előre egyeztetett időpontban fogadjuk.</h1>
+      <h1>Időpontért hívjon minket vagy töltse ki az e-mail-es űrlapot!</h1>
     </div>
     <div class="contact-items">
       <div class="contact-item">
