--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="#about" data-after="Rólunk">Rólunk</a></li>
           <li><a href="#szolgaltatas" data-after="Szolgáltatások">Szolgáltatások</a></li>
           <li><a href="#fogtechnika" data-after="Fogtechnika">Fogtechnika</a></li>
-          <li><a href="#tanacs" data-after="Nekünk fontos a Föld">Nekünk fontos<br>a Föld</a></li>
+          <li><a href="#tanacs" data-after="Nekünk fontos<br>a Föld">Nekünk fontos a Föld</a></li>
           <li><a href="#protokoll" data-after="Rendelői protokoll">Rendelői protokoll</a></li>
           <li><a href="#references" data-after="Rólunk mondták">Rólunk mondták</a></li>
           <li><a href="#penztarak" data-after="Egészségpénztárak">Egészségpénztárak</a></li>
